[tool.poetry]
name = "handson-ml2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.7"
jupyter = "1.0.0"
matplotlib = "3.3.3"
numpy = "1.18.5"
pandas = "1.1.5"
scipy = "1.5.4"
scikit-learn = "0.23.2"
xgboost = "1.2.1"
transformers = "3.3.1"
tensorflow = "2.3.1"
tensorboard = "2.3.0"
tensorboard-plugin-profile = "2.3.0"
tensorflow-datasets = "4.0.1"
tensorflow-hub = "0.9.0"
tensorflow-probability = "0.11.1"
tensorflow-addons = "0.11.2"
gym = {extras = ["atari"], version = "0.17.3"}
tf-agents = "0.6.0"
Pillow = "8.0.1"
graphviz = "0.14.2"
pyglet = "1.4.11"
joblib = "0.14.1"
requests = "2.24.0"
nbdime = "2.1.0"
numexpr = "2.7.1"
nltk = "3.5"
urlextract = "1.1.0"
ftfy = "5.8"
tqdm = "4.50.2"
ipywidgets = "7.5.1"
attrs = "19.3.0"
dill = "0.3.1.1"
gast = "0.3.3"
httplib2 = "0.17.4"
opencv-python = "^4.4.0"
tfx = "0.24.1"
tensorflow-serving-api = "2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
